fix browser script

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   </head>
   <body>
     <script src="./dist/js/bundle.js"></script>
-    <div>Hello</div>
+    <div><h2>Gnomes</h2></div>
     <!-- <form> -->
 
       <input id="teamNumber" type="number" value="2"/>
       <input id="gnomeNumber" type="number" value="2"/>
       <button id="bStart">Start!</button>
+      <br>
+      <div id="maze" class="maze"></div>
     <!-- </form> -->
   </body>
 </html>
